<resources>
    <string name="app_name">Logica App Kotlin</string>
    <string name="conjuction">Conjunction (AND)</string>
    <string name="tvA">A</string>
    <string name="tvB">B</string>
    <string name="tvAB">A ^ B</string>
    <string name="tvT">T</string>
    <string name="tvF">F</string>
    <string name="ptAnswerhint">T or F</string>
    <string name="submit">Submit</string>
    <string name="correctAnswers">The correct number of answers is: %d</string>
</resources>
